# pyqt-formgen

./: .gitignore  .readthedocs.yml  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
docs/: architecture.rst  conf.py  index.rst  quickstart.md  quickstart.rst  state_management.rst  undo_redo.rst
docs/api/: modules.rst
docs/architecture/: index.rst
docs/development/: index.rst
docs/examples/: atomic_operations.rst  basic.rst  dual_axis.rst  index.rst  ui.rst
docs/plans/: flash_performance_optimization_plan.md  opengl_flash_acceleration.md  opengl_multi_window_architecture.md  parameter_form_manager_live_context.md  window_manager_usage.md
src/pyqt_formgen/: __init__.py
src/pyqt_formgen/animation/: __init__.py  flash_config.py  flash_mixin.py  flash_overlay_opengl.py
src/pyqt_formgen/core/: __init__.py  background_task.py  code_generator.py  collapsible_splitter_helper.py  debounce_timer.py  log_utils.py  path_cache.py  performance_monitor.py  reorderable_list_widget.py  rich_text_appender.py  sort_utils.py
src/pyqt_formgen/forms/: __init__.py  form_init_service.py  layout_constants.py  parameter_form_base.py  parameter_form_constants.py  parameter_form_manager.py  parameter_form_service.py  parameter_info_types.py  parameter_type_utils.py  ui_utils.py  widget_creation_config.py  widget_creation_registry.py  widget_creation_types.py  widget_dispatcher.py  widget_factory.py  widget_operations.py  widget_registry.py  widget_strategies.py
src/pyqt_formgen/io/: base.py  defaults.py  exceptions.py  file_manager.py
src/pyqt_formgen/protocols/: __init__.py  codegen_provider.py  component_selection.py  form_config.py  function_registry.py  llm_service.py  log_providers.py  preview_formatter.py  widget_adapters.py  widget_protocols.py  window_factory.py
src/pyqt_formgen/services/: __init__.py  enabled_field_styling_service.py  enum_dispatch_service.py  field_change_dispatcher.py  flag_context_manager.py  parameter_ops_service.py  process_tracker.py  (+11 more)
tests/: __init__.py  conftest.py  test_core.py  test_protocols.py  test_theming.py  test_widgets.py
(+29 files in other folders)
